// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module context extract module context 1`] = `
"const elements = new Set(); // result should be js code
// result should be js code

const a = 1;
export function stopAll() {
  elements.forEach(element => {
    element.pause();
  });
}"
`;

exports[`module context extract module context: module context is empty 1`] = `""`;

exports[`module context extract module context: with import 1`] = `
"import sum from \\"./sum.js\\";
console.log(sum());"
`;

exports[`translate props get props on demand 1`] = `
"export let answer = 42;
export let question;"
`;

exports[`translate props handle default prop 1`] = `"export let answer = 42;"`;

exports[`translate props use {} to get props 1`] = `
"export let answer;
export let question;"
`;

exports[`translate script section extrat script from code 1`] = `"let name = 'world';"`;

exports[`translate script section ignore variable declaration starts with $ 1`] = `"let greeting = 'hello';"`;

exports[`translate script section track change 1`] = `
"let count = 0;
let doubled = 0;
$: {
  doubled = count * 2;
}"
`;
